(fix)三消路径显示问题

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ body {
 
 .cell {
     aspect-ratio: 1;
-    background-color: #f8f8f8;
+    background-color: #49454536;
     border-radius: 4px;
     display: flex;
     justify-content: center;
